--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch",
+    "start": "webpack-dev-server --open",
     "build": "webpack"
   },
   "repository": {
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^3.8.0"
   },
   "dependencies": {
-    "pixi.js": "^5.1.3"
+    "@types/pixi.js": "4.8.9",
+    "pixi.js": "^4.8.8"
   }
 }
